# seizure-prediction

./: API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  MIGRATION.md  RELEASE_CHECKLIST.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: PLUGIN_GUIDE.md  PREDICTIONS_SCHEMA.md  TRAINER_CONTRACT.md  cli.md  extending.md  index.md  install.md  run_artifacts.md
examples/: config_mil_detection.yaml  config_prediction.yaml  config_synthetic.yaml  legacy_pipeline.md
examples/scripts/: analyze_results.py  benchmark_models.py  config_template.py  legacy_nested_cv.py  probability_calibration.py  run_all_subjects.bat  run_all_subjects.sh  run_example.sh  run_experiments.sh  visualize_features.py  visualizer.py  xai.py
examples/scripts/features_analysis/: rank_features.py  utils.py
notebooks/: 01_quickstart.md  02_train_api_example.md  03_analysis_example.md  04_end_to_end_prediction.md  05_end_to_end_detection_mil.md
src/seizure_pred/: __init__.py
src/seizure_pred.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/seizure_pred/analysis/: __init__.py  io.py  metrics.py  plots.py  runner.py  runs.py
src/seizure_pred/cli/: analyze_cmd.py  experiments_cmd.py  list_cmd.py  main.py  predict.py  predict_cmd.py  preprocess_cmd.py  train.py  train_cmd.py
src/seizure_pred/core/: config.py  io.py  logging.py  optional_deps.py  registry.py  runs.py  seed.py  validate.py
src/seizure_pred/docs/: ANALYSIS_MIGRATION.md  CONFIG_VALIDATION.md  DATA_CONTRACTS.md  (+4 more)
templates/: new_callback.py
tests/: test_smoke_pipeline.py
(+102 files in other folders)
